# chess-app

./: .gitignore  About.py  README.md  extract_players_from_lichess_db.py  player_list_by_rating.json  player_list_by_rating_detailed.json  player_list_by_rating_v2_detailed.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
pages/: Chess Coach.py  Ongoing Game.py  Opening Coach.py  Opening Repertoire.py  Profile.py  Rating History.py  Rating Prediction.py  Time Management Analysis.py  Top Players.py  Win Probability.py  analysis.ipynb  data_collection_by_bucket.ipynb  optuna_global_model.ipynb  player_list_by_rating_v2.json  rating_prediction_analysis.ipynb  win_probability_analysis.ipynb  win_probability_model.pkl
pages/models/: best_params.json  bucket_1000_1200_model.pkl  bucket_1200_1400_model.pkl  bucket_1400_1600_model.pkl  bucket_1600_1800_model.pkl  bucket_1800_2000_model.pkl  bucket_2000_2200_model.pkl  bucket_2200_2400_model.pkl  bucket_2400_plus_model.pkl  bucket_800_1000_model.pkl  global_model.pkl  model_registry.json
pages/rating_models/: model_comparison.csv  rating_prediction_model.pkl
utils/: cache_manager.py  session_manager.py
