[project]
name = "chess-app"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mturann", email = "turanmuhammet76@gmail.com"},
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "streamlit",
    "plotly",
    "seaborn",
    "chess",
    "berserk>=0.14.0",
    "scikit-learn>=1.7.2",
    "ipykernel>=7.0.1",
    "python-dotenv>=1.2.1",
    "python-chess>=1.999",
    "stockfish>=3.28.0",
    "statsmodels>=0.14.5",
    "tensorflow>=2.20.0",
    "prophet>=1.2.1",
    "nbformat>=5.10.4",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
